crates/aranya-policy-compiler/tests/data/scoping/duplicate_let_already_defined_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `x` is defined multiple times
  |
2 |     let x = 3
  |         - previous defintion here
3 |     let x = 4
  |         ^ re-defined here
